# sun_core_script

./: .env.example  .gitignore  docker-compose.traefik.yml  docker-compose.yml  pyproject.toml
app/: get_streem_forecast.py
app/alembic/: env.py
app/alembic/versions/: 04af67d526f1_initial_migration.py
app/constants/tests/: test_nordpool.py
app/core/: config.py  utils.py
app/core/tests/: test_config.py  test_utils.py
app/database/tests/: test_mysql_docker.py  test_mysql_docker_connect.sh  test_mysql_docker_show_grants.sh
app/nomination/: curve_transform.py  get_streem_forecast.py  utils.py
app/nomination/tests/: test_curve_transform.py  test_get_streem_forecast.py  test_utils.py
app/nordpool/: api.py
app/nordpool/tests/: test_api.py
app/services/nordpool/: api.py  constants.py  curve_order.py  schema.py  schema_auto.py
app/services/nordpool/commands/: list_orders.py
app/services/nordpool/schema/: auction_multi_resolution_response_schema.py  auction_price_schema.py  auction_response_schema.py  base_schema.py  block_list_response_schema.py  block_result_response_schema.py  combined_orders_response_schema.py  curve_order_response_schema.py  order_result_response_schema.py  portfolio_volume_response_schema.py  reasonability_results_info_schema.py
app/services/nordpool/schema/tests/: test_auction_multi_resolution_response_schema.py  test_auction_price_schema.py  test_auction_response_schema.py  test_base_schema.py  test_block_list_response_schema.py  test_block_result_response_schema.py  test_combined_orders_response_schema.py  test_curve_order_response_schema.py  test_order_result_response_schema.py  test_portfolio_volume_response_schema.py  test_reasonability_results_info_schema.py
app/services/nordpool/tests/: test_api.py  test_constants.py  test_curve_order.py  test_schema.py
app/services/streem/: api.py  get_streem_forecast.py  installation.py  schema.py  utils.py
app/services/streem/tests/: test_api.py  test_get_streem_forecast.py  test_get_streem_forecast_integration.py  test_installation.py  test_schema.py  test_utils.py
app/services/streem/utils/: day_boundaries.py  hours_in_day.py  streem_to_nordpool.py  transform_json.py  transform_json_data.py  validate_json.py  validate_json_pd.py  validation_context.py
app/services/streem/utils/tests/: test_day_boundaries.py  test_hours_in_day.py  test_streem_to_nordpool.py  test_transform_json.py  test_transform_json_data.py  test_validate_dates.py  test_validate_json.py  test_validate_json_pd.py  test_validate_schema.py  test_validation_context.py
app/tests/: test_get_streem_forecast.py
script/: create_set_priviledge_on_test_db.sh  set_priviledge_on_test_db.sql
src/: get_streem_forecast.py
src/constants/: time_zones.py
